feat: Logic change to highlight each text-node separately

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
       "js": [
         "external/lodash.min.js", 
         "core/constants.js", "core/helper.js", "core/highlight-dehighlight.js", "core/store-restore.js",
-        "weblighter.js", "saved.js"
+        "weblighter.js", "saved.js",
+        "tests/test.js"
       ]
     }
   ],
