chore: Change filename - content.js to sidebar-message-listener

--- a/manifest.json
+++ b/manifest.json
@@ -12,8 +12,7 @@
       "js": [
         "external/lodash.js",
         "core/constants.js", "core/helper.js", "core/highlight-dehighlight.js", "core/store-restore.js",
-        "weblighter.js", "saved.js",
-        "tests/test.js"
+        "weblighter.js"
       ]
     }
   ],
