--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*.org/*"],
+      "matches": ["<all_urls>"],
       "js": [
         "external/lodash.js",
         "core/constants.js", "core/helper.js", "core/highlight-dehighlight.js", "core/store-restore.js",
@@ -21,7 +21,7 @@
     "default_panel": "sidebar/sidebar.html"
   },
   "permissions": [
-    "tabs",
-    "*://*.org/*"
+    "<all_urls>",
+    "tabs"
   ]
 }
